fix(tabs): vertical tab component now truncates
vertical tab component now truncates

✅ Closes: COMUI-2882

--- a/packages/genesys-spark-components/src/components/stable/gux-tabs/gux-tab-list/gux-tab-list.scss
+++ b/packages/genesys-spark-components/src/components/stable/gux-tabs/gux-tab-list/gux-tab-list.scss
@@ -7,7 +7,6 @@ gux-tabs {
         display: flex;
         flex-direction: column;
         width: var(--gse-ui-tabs-set-vertical-width);
-        max-width: 160px;
         height: 100%;
         margin-right: var(--gse-ui-tabs-set-vertical-marginRight);
         border-right: var(--gse-ui-tabs-item-divider-horizontal-height) solid
